--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>실시간 주식 거래 시뮬레이터 - 사용자별 수익률 랭킹</title>
+  <title>실시간 주식 거래 시뮬레이터</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    /* 생략 없이 전체 CSS 포함 */
     body {
       display: flex;
       font-family: Arial, sans-serif;
@@ -52,42 +51,11 @@
       font-size: 14px;
       color: #333;
     }
-    @media (max-height: 700px), (max-width: 480px) {
-      body {
-        flex-direction: column;
-        height: 100vh;
-      }
-      .sidebar {
-        width: 100%;
-        height: 130px;
-        overflow-x: auto;
-        overflow-y: hidden;
-        white-space: nowrap;
-        padding: 5px 10px;
-        display: flex;
-        flex-wrap: nowrap;
-        align-items: center;
-        box-sizing: border-box;
-      }
-      .stock-list button {
-        display: inline-block;
-        width: auto;
-        margin-right: 8px;
-        margin-bottom: 0;
-        white-space: normal;
-        flex-shrink: 0;
-      }
-      .chart-container {
-        height: calc(100vh - 130px);
-        overflow-y: auto;
-        padding: 10px;
-      }
-    }
   </style>
 </head>
 <body>
   <div class="sidebar">
-    <h2 style="flex-shrink: 0; margin-right: 15px;">종목 선택</h2>
+    <h2>종목 선택</h2>
     <div class="stock-list" id="stockButtons"></div>
     <div class="rankings">
       <h3>🏆 수익률 순위</h3>
@@ -136,16 +104,14 @@
   </div>
 
   <script>
-    const stocks = ['초기투자', '삼성전자', '현대차', 'LG전자', '카카오', '네이버', '셀트리온', 'POSCO', 'SK하이닉스', '기아', '한화솔루션', 'NAVER', '신한지주', 'KB금융', '삼성바이오로직스', '롯데케미칼'];
+    const stocks = ['초기투자', '삼성전자', '현대차', 'LG전자', '카카오', '네이버', '셀트리온', 'POSCO', 'SK하이닉스', '기아'];
     const startPrices = {
       '초기투자': 1000, '삼성전자': 60000, '현대차': 220000, 'LG전자': 130000,
       '카카오': 70000, '네이버': 300000, '셀트리온': 250000, 'POSCO': 300000,
-      'SK하이닉스': 110000, '기아': 85000, '한화솔루션': 36000,
-      'NAVER': 300000, '신한지주': 40000, 'KB금융': 47000,
-      '삼성바이오로직스': 850000, '롯데케미칼': 300000
+      'SK하이닉스': 110000, '기아': 85000
     };
     const maxDataLength = 50;
-    const initialCash = 50000;
+    const initialCash = 100000;
 
     let currentUserName = null;
     let usersData = {};
@@ -153,16 +119,14 @@
     let stockData = {};
     let chart, data;
     let priceUpdateInterval = null;
-    let boomCounter = 0;
+    let crashCounter = 0;
 
-    function getRandomPrice(prevPrice, isBoom = false, isCrash = false) {
+    function getRandomPrice(prevPrice, isCrash = false) {
       let changePercent;
-      if (isBoom) {
-        changePercent = 0.2 + Math.random() * 0.1; // +20~30%
-      } else if (isCrash) {
-        changePercent = -0.3 + Math.random() * 0.1; // -30~-20%
+      if (isCrash) {
+        changePercent = -0.3 + Math.random() * 0.1; // -30% ~ -20%
       } else {
-        changePercent = (Math.random() - 0.45) * 0.06;
+        changePercent = 0.002 + (Math.random() - 0.5) * 0.01; // 소폭 상승 편향
       }
       return Math.max(1, Math.round(prevPrice * (1 + changePercent)));
     }
@@ -182,21 +146,17 @@
     }
 
     function updateStockPrices() {
-      boomCounter++;
-      let boomIndex = -1;
-      let isBoom = false, isCrash = false;
-
-      if (boomCounter >= 30) { // 약 30초마다 발생
-        boomIndex = Math.floor(Math.random() * stocks.length);
-        isBoom = Math.random() < 0.5;
-        isCrash = !isBoom;
-        boomCounter = 0;
+      crashCounter++;
+      let crashIndex = -1;
+      if (crashCounter >= 30) {
+        crashIndex = Math.floor(Math.random() * stocks.length);
+        crashCounter = 0;
       }
 
       stocks.forEach((stock, i) => {
         let arr = stockData[stock];
         const prevPrice = arr[arr.length - 1];
-        const newPrice = getRandomPrice(prevPrice, i === boomIndex && isBoom, i === boomIndex && isCrash);
+        const newPrice = getRandomPrice(prevPrice, i === crashIndex);
         arr.push(newPrice);
         if (arr.length > maxDataLength) arr.shift();
       });
@@ -206,20 +166,156 @@
       updateRanking();
     }
 
-    // ✅ 나머지 기존 함수들 (`loadUsersData`, `saveUsersData`, `initCurrentUser`, `buyStock`, `sellStock`, `logTrade`, `updateTradeLog`, `calculateUserReturn`, `updateRanking`, `createStockButtons`, `initChart`, `updateChart`, `selectStock`, `updateInfo`)는 사용하신 코드 그대로 유지하면 됩니다.
+    function loadUsersData() {
+      const saved = localStorage.getItem('stockSimData');
+      usersData = saved ? JSON.parse(saved) : {};
+    }
 
-    // 이름 설정 버튼 이벤트
+    function saveUsersData() {
+      localStorage.setItem('stockSimData', JSON.stringify(usersData));
+    }
+
+    function initCurrentUser(name) {
+      currentUserName = name;
+      localStorage.setItem('currentUserName', name);
+      if (!usersData[name]) {
+        usersData[name] = { cash: initialCash, stocks: {}, trades: [] };
+      }
+      saveUsersData();
+      updateInfo();
+      updateTradeLog();
+      updateRanking();
+    }
+
+    function buyStock() {
+      const amount = parseInt(document.getElementById('tradeAmount').value);
+      if (isNaN(amount) || amount <= 0) return alert("수량 오류");
+      const price = stockData[currentStock].slice(-1)[0];
+      const totalCost = price * amount;
+      if (usersData[currentUserName].cash < totalCost) return alert("자금 부족");
+
+      usersData[currentUserName].cash -= totalCost;
+      usersData[currentUserName].stocks[currentStock] = (usersData[currentUserName].stocks[currentStock] || 0) + amount;
+      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "매수", price, amount, total: totalCost });
+      saveUsersData();
+      updateInfo();
+      updateTradeLog();
+    }
+
+    function sellStock() {
+      const amount = parseInt(document.getElementById('tradeAmount').value);
+      if (isNaN(amount) || amount <= 0) return alert("수량 오류");
+      const price = stockData[currentStock].slice(-1)[0];
+      const held = usersData[currentUserName].stocks[currentStock] || 0;
+      if (held < amount) return alert("보유 수량 부족");
+
+      usersData[currentUserName].stocks[currentStock] -= amount;
+      const gain = price * amount;
+      usersData[currentUserName].cash += gain;
+      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "매도", price, amount, total: gain });
+      saveUsersData();
+      updateInfo();
+      updateTradeLog();
+    }
+
+    function updateTradeLog() {
+      const logBody = document.getElementById('tradeLog').querySelector('tbody');
+      logBody.innerHTML = "";
+      usersData[currentUserName].trades.slice().reverse().forEach(trade => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td>${trade.time}</td>
+          <td>${trade.stock}</td>
+          <td>${trade.type}</td>
+          <td>${trade.price}</td>
+          <td>${trade.amount}</td>
+          <td>${trade.total}</td>
+          <td>-</td>
+          <td>-</td>
+        `;
+        logBody.appendChild(row);
+      });
+    }
+
+    function updateInfo() {
+      document.getElementById('cash').textContent = usersData[currentUserName].cash.toLocaleString();
+      const price = stockData[currentStock].slice(-1)[0];
+      const shares = usersData[currentUserName].stocks[currentStock] || 0;
+      document.getElementById('shares').textContent = shares;
+      document.getElementById('currentPrice').textContent = price.toLocaleString();
+      document.getElementById('maxBuy').textContent = `최대 매수 가능: ${Math.floor(usersData[currentUserName].cash / price)}주`;
+      document.getElementById('profit').textContent = '-'; // 단순 표시
+    }
+
+    function calculateUserReturn(user) {
+      let totalValue = user.cash;
+      for (const stock in user.stocks) {
+        const amount = user.stocks[stock];
+        const latestPrice = stockData[stock]?.slice(-1)[0] || 0;
+        totalValue += amount * latestPrice;
+      }
+      return ((totalValue - initialCash) / initialCash) * 100;
+    }
+
+    function updateRanking() {
+      const rankList = document.getElementById('rankList');
+      const ranked = Object.entries(usersData)
+        .map(([name, user]) => ({ name, return: calculateUserReturn(user) }))
+        .sort((a, b) => b.return - a.return);
+      rankList.innerHTML = ranked.map(r => `<li>${r.name}: ${r.return.toFixed(2)}%</li>`).join("");
+    }
+
+    function createStockButtons() {
+      const container = document.getElementById('stockButtons');
+      container.innerHTML = "";
+      stocks.forEach(stock => {
+        const btn = document.createElement('button');
+        btn.textContent = stock;
+        btn.onclick = () => selectStock(stock);
+        container.appendChild(btn);
+      });
+    }
+
+    function initChart() {
+      const ctx = document.getElementById('stockChart').getContext('2d');
+      data = {
+        labels: Array(maxDataLength).fill(""),
+        datasets: [{
+          label: "가격",
+          data: stockData[currentStock],
+          borderColor: 'blue',
+          borderWidth: 2,
+          pointRadius: 0,
+          fill: false
+        }]
+      };
+      chart = new Chart(ctx, {
+        type: 'line',
+        data: data,
+        options: { animation: false }
+      });
+    }
+
+    function updateChart() {
+      data.datasets[0].data = stockData[currentStock];
+      chart.update();
+    }
+
+    function selectStock(stock) {
+      currentStock = stock;
+      document.getElementById('stock-title').textContent = stock;
+      updateChart();
+      updateInfo();
+    }
+
     document.getElementById('setNameBtn').onclick = () => {
       const name = document.getElementById('userNameInput').value.trim();
       if (!name) return alert("이름을 입력하세요.");
-      if (name.includes('|')) return alert("이름에 '|' 문자는 사용할 수 없습니다.");
       initCurrentUser(name);
-      alert("이름이 설정되었습니다.");
       if (priceUpdateInterval) clearInterval(priceUpdateInterval);
       priceUpdateInterval = setInterval(updateStockPrices, 1000);
     };
 
-    // 초기 실행
     function init() {
       initStockData();
       loadUsersData();
