--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>실시간 주식 거래 시뮬레이터</title>
+  <title>실시간 주식 거래 시뮬레이터 (롱/숏 + 폭등/폭락)</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
@@ -75,13 +75,15 @@
     </div>
     <div class="controls">
       <input type="number" id="tradeAmount" value="1" min="1" />
-      <button onclick="buyStock()">🟢 매수</button>
-      <button onclick="sellStock()">🔴 매도</button>
+      <button onclick="buyStock()">🟢 매수 (롱 진입)</button>
+      <button onclick="sellStock()">🔴 매도 (롱 청산)</button><br /><br />
+      <button onclick="shortSell()">📉 숏매수 (숏 진입)</button>
+      <button onclick="shortBuy()">📈 숏매도 (숏 청산)</button>
       <div class="max-buy" id="maxBuy"></div>
       <div class="info">
-        💰 자금: <span id="cash">-</span>원 |
+        💰 자금: <span id="cash">-</span>원<br />
         💼 보유 수량: <span id="shares">-</span>개<br />
-        📈 손익: <span id="profit" style="font-weight: bold;">-</span>
+        🟠 숏 포지션: <span id="shortShares">-</span>개<br />
       </div>
     </div>
     <canvas id="stockChart" width="1200" height="400"></canvas>
@@ -95,8 +97,6 @@
           <th>단가</th>
           <th>수량</th>
           <th>총액</th>
-          <th>손익</th>
-          <th>수익률</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -119,17 +119,23 @@
     let stockData = {};
     let chart, data;
     let priceUpdateInterval = null;
+
+    // 폭락, 폭등 카운터
     let crashCounter = 0;
     let boomCounter = 0;
 
+    // 랜덤 가격 생성 함수
     function getRandomPrice(prevPrice, isCrash = false, isBoom = false) {
       let changePercent = 0;
       if (isCrash) {
-        changePercent = -1.0 + Math.random() * 0.1; // -100% ~ -90%
+        // 폭락: -90% ~ -100%
+        changePercent = -0.9 - Math.random() * 0.1;
       } else if (isBoom) {
-        changePercent = 0.5; // +50%
+        // 폭등: +120% (즉, 2.2배)
+        changePercent = 1.2;
       } else {
-        changePercent = (Math.random() - 0.5) * 0.01; // -0.5% ~ +0.5%
+        // 일반 변동: -0.5% ~ +0.5%
+        changePercent = (Math.random() - 0.5) * 0.01;
       }
       return Math.max(1, Math.round(prevPrice * (1 + changePercent)));
     }
@@ -152,16 +158,16 @@
       crashCounter++;
       boomCounter++;
 
-      const isCrash = crashCounter >= 30;
-      const isBoom = boomCounter >= 60;
+      const isCrash = crashCounter >= 30; // 30초마다 폭락
+      const isBoom = boomCounter >= 45;   // 45초마다 폭등
 
       if (isCrash) crashCounter = 0;
       if (isBoom) boomCounter = 0;
 
       stocks.forEach(stock => {
         const arr = stockData[stock];
-        const prev = arr[arr.length - 1];
-        const newPrice = getRandomPrice(prev, isCrash, isBoom);
+        const prevPrice = arr[arr.length - 1];
+        const newPrice = getRandomPrice(prevPrice, isCrash, isBoom);
         arr.push(newPrice);
         if (arr.length > maxDataLength) arr.shift();
       });
@@ -184,7 +190,12 @@
       currentUserName = name;
       localStorage.setItem('currentUserName', name);
       if (!usersData[name]) {
-        usersData[name] = { cash: initialCash, stocks: {}, trades: [] };
+        usersData[name] = {
+          cash: initialCash,
+          stocks: {},
+          shortStocks: {},
+          trades: []
+        };
       }
       saveUsersData();
       updateInfo();
@@ -192,6 +203,7 @@
       updateRanking();
     }
 
+    // 롱매수
     function buyStock() {
       const amount = parseInt(document.getElementById('tradeAmount').value);
       if (isNaN(amount) || amount <= 0) return alert("수량 오류");
@@ -201,12 +213,13 @@
 
       usersData[currentUserName].cash -= totalCost;
       usersData[currentUserName].stocks[currentStock] = (usersData[currentUserName].stocks[currentStock] || 0) + amount;
-      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "매수", price, amount, total: totalCost });
+      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "롱 매수", price, amount, total: totalCost });
       saveUsersData();
       updateInfo();
       updateTradeLog();
     }
 
+    // 롱매도
     function sellStock() {
       const amount = parseInt(document.getElementById('tradeAmount').value);
       if (isNaN(amount) || amount <= 0) return alert("수량 오류");
@@ -217,7 +230,41 @@
       usersData[currentUserName].stocks[currentStock] -= amount;
       const gain = price * amount;
       usersData[currentUserName].cash += gain;
-      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "매도", price, amount, total: gain });
+      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "롱 매도", price, amount, total: gain });
+      saveUsersData();
+      updateInfo();
+      updateTradeLog();
+    }
+
+    // 숏매수 (숏 포지션 진입, 주식 빌려서 판 것과 동일, 현금 증가)
+    function shortSell() {
+      const amount = parseInt(document.getElementById('tradeAmount').value);
+      if (isNaN(amount) || amount <= 0) return alert("수량 오류");
+      const price = stockData[currentStock].slice(-1)[0];
+      const totalGain = price * amount;
+
+      usersData[currentUserName].cash += totalGain;
+      usersData[currentUserName].shortStocks[currentStock] = (usersData[currentUserName].shortStocks[currentStock] || 0) + amount;
+      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "숏 매수 (숏 진입)", price, amount, total: totalGain });
+      saveUsersData();
+      updateInfo();
+      updateTradeLog();
+    }
+
+    // 숏매도 (숏 포지션 청산, 주식 사서 빌린 주식 갚음, 현금 감소)
+    function shortBuy() {
+      const amount = parseInt(document.getElementById('tradeAmount').value);
+      if (isNaN(amount) || amount <= 0) return alert("수량 오류");
+      const price = stockData[currentStock].slice(-1)[0];
+      const heldShort = usersData[currentUserName].shortStocks[currentStock] || 0;
+      if (heldShort < amount) return alert("숏 포지션 부족");
+
+      const totalCost = price * amount;
+      if (usersData[currentUserName].cash < totalCost) return alert("자금 부족");
+
+      usersData[currentUserName].cash -= totalCost;
+      usersData[currentUserName].shortStocks[currentStock] -= amount;
+      usersData[currentUserName].trades.push({ time: new Date().toLocaleTimeString(), stock: currentStock, type: "숏 매도 (숏 청산)", price, amount, total: totalCost });
       saveUsersData();
       updateInfo();
       updateTradeLog();
@@ -232,11 +279,9 @@
           <td>${trade.time}</td>
           <td>${trade.stock}</td>
           <td>${trade.type}</td>
-          <td>${trade.price}</td>
+          <td>${trade.price.toLocaleString()}</td>
           <td>${trade.amount}</td>
-          <td>${trade.total}</td>
-          <td>-</td>
-          <td>-</td>
+          <td>${trade.total.toLocaleString()}</td>
         `;
         logBody.appendChild(row);
       });
@@ -246,10 +291,12 @@
       document.getElementById('cash').textContent = usersData[currentUserName].cash.toLocaleString();
       const price = stockData[currentStock].slice(-1)[0];
       const shares = usersData[currentUserName].stocks[currentStock] || 0;
+      const shortShares = usersData[currentUserName].shortStocks[currentStock] || 0;
       document.getElementById('shares').textContent = shares;
+      document.getElementById('shortShares').textContent = shortShares;
       document.getElementById('currentPrice').textContent = price.toLocaleString();
       document.getElementById('maxBuy').textContent = `최대 매수 가능: ${Math.floor(usersData[currentUserName].cash / price)}주`;
-      document.getElementById('profit').textContent = '-';
+      document.getElementById('stock-title').textContent = currentStock;
     }
 
     function calculateUserReturn(user) {
@@ -259,84 +306,6 @@
         const latestPrice = stockData[stock]?.slice(-1)[0] || 0;
         totalValue += amount * latestPrice;
       }
-      return ((totalValue - initialCash) / initialCash) * 100;
-    }
-
-    function updateRanking() {
-      const rankList = document.getElementById('rankList');
-      const ranked = Object.entries(usersData)
-        .map(([name, user]) => ({ name, return: calculateUserReturn(user) }))
-        .sort((a, b) => b.return - a.return);
-      rankList.innerHTML = ranked.map(r => `<li>${r.name}: ${r.return.toFixed(2)}%</li>`).join("");
-    }
-
-    function createStockButtons() {
-      const container = document.getElementById('stockButtons');
-      container.innerHTML = "";
-      stocks.forEach(stock => {
-        const btn = document.createElement('button');
-        btn.textContent = stock;
-        btn.onclick = () => selectStock(stock);
-        container.appendChild(btn);
-      });
-    }
-
-    function initChart() {
-      const ctx = document.getElementById('stockChart').getContext('2d');
-      data = {
-        labels: Array(maxDataLength).fill(""),
-        datasets: [{
-          label: "가격",
-          data: stockData[currentStock],
-          borderColor: 'blue',
-          borderWidth: 2,
-          pointRadius: 0,
-          fill: false
-        }]
-      };
-      chart = new Chart(ctx, {
-        type: 'line',
-        data: data,
-        options: { animation: false }
-      });
-    }
-
-    function updateChart() {
-      data.datasets[0].data = stockData[currentStock];
-      chart.update();
-    }
-
-    function selectStock(stock) {
-      currentStock = stock;
-      document.getElementById('stock-title').textContent = stock;
-      updateChart();
-      updateInfo();
-    }
-
-    document.getElementById('setNameBtn').onclick = () => {
-      const name = document.getElementById('userNameInput').value.trim();
-      if (!name) return alert("이름을 입력하세요.");
-      initCurrentUser(name);
-      if (priceUpdateInterval) clearInterval(priceUpdateInterval);
-      priceUpdateInterval = setInterval(updateStockPrices, 1000);
-    };
-
-    function init() {
-      initStockData();
-      loadUsersData();
-      const savedName = localStorage.getItem('currentUserName');
-      if (savedName && savedName in usersData) {
-        currentUserName = savedName;
-        document.getElementById('userNameInput').value = currentUserName;
-        initCurrentUser(currentUserName);
-      }
-      createStockButtons();
-      selectStock(currentStock);
-      initChart();
-      priceUpdateInterval = setInterval(updateStockPrices, 1000);
-    }
-
-    init();
-  </script>
-</body>
-</html>
+      // 숏 포지션 평가손익 계산
+      for (const stock in user.shortStocks) {
+        const amount = user.shortStocks[stock
